; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_haiku.c_uv_get_total_memory.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_haiku.c_uv_get_total_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@B_OK = common dso_local global i64 0, align 8
@B_PAGE_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_get_total_memory() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_3__, align 4
  %4 = call i64 @get_system_info(%struct.TYPE_3__* %3)
  store i64 %4, i64* %2, align 8
  %5 = load i64, i64* %2, align 8
  %6 = load i64, i64* @B_OK, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %14

9:                                                ; preds = %0
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @B_PAGE_SIZE, align 4
  %13 = mul nsw i32 %11, %12
  store i32 %13, i32* %1, align 4
  br label %14

14:                                               ; preds = %9, %8
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i64 @get_system_info(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
